--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 watchdog = "^3.0.0"
 beautifulsoup4 = "^4.12.2"
+httpx = "^0.26.0"
+langchain = "^0.1.0"
+langchain-community = "^0.0.12"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
