--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ beautifulsoup4 = "^4.12.2"
 httpx = "^0.26.0"
 langchain = "^0.1.0"
 langchain-community = "^0.0.12"
+rich = "^13.7.0"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
