--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ beautifulsoup4 = "^4.12.2"
 rich = "^13.7.0"
 ollama = "^0.1.2"
 duckduckgo-search = "^4.2"
+markdown = "^3.5.2"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
