--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ rich = "^13.7.0"
 ollama = "^0.1.2"
 duckduckgo-search = "^4.2"
 markdown = "^3.5.2"
+openai = "^1.10.0"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
