--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ ollama = "^0.1.2"
 duckduckgo-search = "^4.2"
 markdown = "^3.5.2"
 openai = "^1.10.0"
+langchain = "^0.1.4"
+click = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
