--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ click = "^8.1.7"
 twisted = "^23.10.0"
 hachiko = "^0.4.0"
 service-identity = "^24.1.0"
+einops = "^0.7.0"
+tiktoken = "^0.6.0"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
