--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ hachiko = "^0.4.0"
 service-identity = "^24.1.0"
 einops = "^0.7.0"
 tiktoken = "^0.6.0"
+langchain-community = "^0.0.20"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
