--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ service-identity = "^24.1.0"
 einops = "^0.7.0"
 tiktoken = "^0.6.0"
 langchain-community = "^0.0.20"
+vllm = "^0.3.1"
+jinja2 = "^3.1.3"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
