--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ tiktoken = "^0.6.0"
 langchain-community = "^0.0.20"
 vllm = "^0.3.1"
 jinja2 = "^3.1.3"
+sqlalchemy = "^2.0.28"
+pydantic = "^2.6.3"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
