--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,10 @@ vllm = "^0.3.1"
 jinja2 = "^3.1.3"
 sqlalchemy = "^2.0.28"
 pydantic = "^2.6.3"
+pytest = "^8.0.2"
+pytest-cov = "^4.1.0"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 ipdb = "^0.13.13"
 flake8 = "^6.0.0"
 isort = "^5.12.0"
@@ -65,11 +67,16 @@ autoflake = "^2.2.0"
 sourcery-cli = "^1.8.0"
 debugpy = "^1.6.7.post1"
 docformatter = { extras = ["tomli"], version = "^1.7.5" }
+icecream = "^2.1.3"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
+include = ["ic"]
+imports = ["ic"]
 
 
 [tool.isort]
@@ -112,6 +119,7 @@ tab-width = 4
 in-place = true
 
 [tool.autoflake]
+imports = ["ic"]
 check = false
 quiet = true
 in_place = true
